# Bluebook

./: .env.example  .gitignore  CODEBASE_GUIDE.md  Citation_Extractor_Eyecite.py  LICENSE.txt  README.md  T_cite.py  api_gov  arm.py  citation_extractor.py  core.py  eye.py  legal_citation_extractor.py  pdf_citation_extractor.py  pyproject.toml  requirements.txt
